# fqcomp28

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme.md  readme.md
benchmark/: Results.md  install_tools.sh  run_benchmark.py
cmake/: Dependencies.cmake  Hooks.cmake  Libbsc.cmake
scripts/: check_compression_integrity.sh  fqcomp_parameter_range.sh  pre-commit.sh  pre-push.sh
src/: CMakeLists.txt  app.cpp  app.h  archive.cpp  archive.h  bootstrap.cpp  compressed_buffers.h  defs.h  encoding_context.cpp  encoding_context.h  entropy_common.h  entropy_sequence.cpp  entropy_sequence.h  entry_point.cpp  fastq_io.cpp  fastq_io.h  fse_common.h  fse_common.hpp  fse_compressor.h  fse_quality.cpp  fse_quality.h  fse_sequence.cpp  fse_sequence.h  headers.cpp  headers.h  main.cpp  memcompress.cpp  memcompress.h  prepare.cpp  prepare.h  process.cpp  process.h  report.cpp  report.h  sequtils.h  settings.h  utils.cpp  utils.h  workspace.cpp  workspace.h
test/: CMakeLists.txt  archive_test.cpp  encoding_context_test.cpp  fastq_io_test.cpp  fse_quality_test.cpp  fse_sequence_test.cpp  headers_test.cpp  memcompress_test.cpp  sequtils_test.cpp  test_utils.cpp  test_utils.h  workspace_test.cpp
test/data/: SRR065390_1_first5.fastq  SRR065390_sub_1.fastq  SRR065390_sub_2.fastq  without_ns.fastq
